tarorpc+rpcserver: implement AddrReceives RPC
